Fix JShell classpath, submit auto-wire, subprocess teardown; bump to 1.0.27
Addresses three follow-ups Kubera reported against 1.0.26.

F1 — JShell's compilation context didn't inherit the subprocess's module path,
so sandbox code referencing HostBridge failed to compile with "package
ai.singlr.repl.sandbox does not exist". The subprocess now resolves the
HostBridge class's code source via getProtectionDomain() and adds it to
JShell's classpath before the auto-imports.

F2 — SubmitFunction was not auto-registered. Callers had to build their own
AtomicReference, register a SubmitFunction against it, and thread it through
the config — making ReplSession.submittedOutput() effectively dead because
nothing wrote to the session's internal ref. ReplSession.create now
auto-registers a SubmitFunction bound to the session's own ref when the
caller hasn't supplied one; user-registered submits are left alone.

F3 — Subprocess teardown hardening: register a JVM shutdown hook that
destroys the subprocess if the caller forgets session.close(); reorder
close() to destroyForcibly() the subprocess before closing the transport
(closing our end of a pipe can't unblock a reader pinned in a native read —
only the subprocess exiting can); System.exit(0) in the bootstrap after
readLoop + jshell.close() so any lingering JShell threads can't keep the
subprocess alive.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>